# WW3

./: CMakeLists.txt  assemble_era5_wind_chunks.sh  build_ww3_gadi.sh  jobscript_assemble_era5_wind_batch_gadi.sh  jobscript_prepare_era5_wind_batch_gadi.sh  prepare_era5_wind_batch.sh  prepare_era5_wind_chunk.sh
.github/build-ci/data/: standard.json
.github/build-ci/manifests/: gcc-no-access3.spack.yaml.j2  intel-access3.spack.yaml.j2  intel-no-access3.spack.yaml.j2  oneapi-access3.spack.yaml.j2  oneapi-no-access3.spack.yaml.j2
WW3_PreProc/: namelists_Global.nml
cmake/: Access3Ww3libConfig.cmake.in
model/src/: w3gdatmd.F90  w3gridmd.F90  w3iogrmd.F90  w3sic4md.F90  w3src6md.F90  w3srcemd.F90  w3swldmd.F90  w3wavemd.F90  wav_comp_nuopc.F90  wav_import_export.F90  wmesmfmd.F90
model/src/cmake/: check_switches.cmake
run/: times.WND  ww3_prnc.inp  ww3_shel.nml
